Add recipe management interface in index.html
This HTML file includes a recipe management interface with a search bar, form for adding recipes, and dynamic rendering of recipe cards. It also features styling for layout and interactivity.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,304 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#8a2be2">
+    <title>🐝 Donna's Buzzing Recipe Book 🐝</title>
+
+    <style>
+        :root {
+            --primary: #8a2be2;
+            --secondary: #e6d5ff;
+            --accent: #ffd700;
+            --bg: #fcfaff;
+            --text: #2c1810;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', system-ui, sans-serif;
+            background: var(--bg);
+            color: var(--text);
+            line-height: 1.6;
+        }
+
+        header {
+            background: linear-gradient(135deg, var(--primary), #b19cd9);
+            color: white;
+            padding: 1rem;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .bee-title {
+            font-size: 2rem;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5rem;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 1rem;
+        }
+
+        .honey-comb {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 1.5rem;
+            padding: 1rem;
+        }
+
+        .recipe-card {
+            background: white;
+            border-radius: 15px;
+            padding: 1.5rem;
+            box-shadow: 0 4px 15px rgba(138, 43, 226, 0.1);
+            transition: transform 0.2s;
+            border: 2px solid var(--secondary);
+        }
+
+        .recipe-card:hover {
+            transform: translateY(-3px);
+        }
+
+        .recipe-header {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .recipe-title {
+            margin: 0;
+            color: var(--primary);
+            font-size: 1.25rem;
+        }
+
+        .add-recipe {
+            position: fixed;
+            bottom: 2rem;
+            right: 2rem;
+            background: var(--primary);
+            color: white;
+            border: none;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            font-size: 2rem;
+            cursor: pointer;
+            box-shadow: 0 4px 15px rgba(138, 43, 226, 0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.2s;
+        }
+
+        .add-recipe:hover {
+            transform: scale(1.1);
+        }
+
+        .recipe-form {
+            background: white;
+            padding: 2rem;
+            border-radius: 15px;
+            margin-bottom: 2rem;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 0.8rem;
+            margin-bottom: 1rem;
+            border: 2px solid var(--secondary);
+            border-radius: 8px;
+            font-size: 1rem;
+        }
+
+        button {
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 0.8rem 1.5rem;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.2s;
+        }
+
+        button:hover {
+            background: #7823c9;
+        }
+
+        .tag {
+            background: var(--secondary);
+            color: var(--primary);
+            padding: 0.3rem 0.8rem;
+            border-radius: 15px;
+            font-size: 0.9rem;
+            display: inline-block;
+            margin-right: 0.5rem;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        .search-bar {
+            width: 100%;
+            max-width: 500px;
+            margin: 1rem auto;
+            position: relative;
+        }
+
+        .search-bar input {
+            width: 100%;
+            padding-left: 2.5rem;
+        }
+
+        .search-bar::before {
+            content: "🔍";
+            position: absolute;
+            left: 0.8rem;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .bee-decoration {
+            position: fixed;
+            font-size: 1.5rem;
+            animation: float 3s ease-in-out infinite;
+            z-index: -1;
+            opacity: 0.5;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-20px); }
+        }
+    </style>
+</head>
+<body>
+    <div class="bee-decoration" style="top: 20%; left: 10%">🐝</div>
+    <div class="bee-decoration" style="top: 40%; right: 15%">🐝</div>
+    <div class="bee-decoration" style="bottom: 30%; left: 20%">🐝</div>
+
+    <header>
+        <h1 class="bee-title">🐝 Donna's Recipe Hive 🍯</h1>
+        <p>Your sweet collection of delicious recipes</p>
+    </header>
+
+    <div class="container">
+        <div class="search-bar">
+            <input type="search" id="searchRecipes" placeholder="Search your recipes...">
+        </div>
+
+        <div id="recipeForm" class="recipe-form hidden">
+            <h2>🍳 Add New Recipe</h2>
+            <input type="text" id="recipeName" placeholder="Recipe Name" required>
+            <input type="text" id="recipeCategory" placeholder="Category (e.g., Dessert, Main Course)">
+            <textarea id="ingredients" placeholder="Ingredients (one per line)" rows="5"></textarea>
+            <textarea id="instructions" placeholder="Instructions" rows="5"></textarea>
+            <button type="submit" id="saveRecipe">Save Recipe 📝</button>
+            <button type="button" id="cancelRecipe">Cancel ❌</button>
+        </div>
+
+        <div id="recipeList" class="honey-comb">
+            <!-- Recipe cards will be dynamically added here -->
+        </div>
+    </div>
+
+    <button class="add-recipe" id="addRecipeBtn" title="Add New Recipe">➕</button>
+
+    <script>
+        // Recipe management code will go here
+        const recipes = JSON.parse(localStorage.getItem('donnaRecipes') || '[]');
+        
+        function saveRecipes() {
+            localStorage.setItem('donnaRecipes', JSON.stringify(recipes));
+        }
+
+        function addRecipe(recipe) {
+            recipes.unshift({
+                id: Date.now(),
+                ...recipe,
+                date: new Date().toISOString()
+            });
+            saveRecipes();
+            renderRecipes();
+        }
+
+        function renderRecipes(searchTerm = '') {
+            const recipeList = document.getElementById('recipeList');
+            recipeList.innerHTML = '';
+
+            const filteredRecipes = recipes.filter(recipe => 
+                recipe.name.toLowerCase().includes(searchTerm.toLowerCase()) ||
+                recipe.category.toLowerCase().includes(searchTerm.toLowerCase())
+            );
+
+            filteredRecipes.forEach(recipe => {
+                const card = document.createElement('div');
+                card.className = 'recipe-card';
+                card.innerHTML = `
+                    <div class="recipe-header">
+                        <h3 class="recipe-title">${recipe.name}</h3>
+                        <span>🍽️</span>
+                    </div>
+                    <div class="tag">${recipe.category}</div>
+                    <p><strong>Ingredients:</strong></p>
+                    <p>${recipe.ingredients.split('\n').slice(0,3).join(', ')}${
+                        recipe.ingredients.split('\n').length > 3 ? '...' : ''
+                    }</p>
+                    <button onclick="deleteRecipe(${recipe.id})">Delete 🗑️</button>
+                `;
+                recipeList.appendChild(card);
+            });
+        }
+
+        function deleteRecipe(id) {
+            if (confirm('Are you sure you want to delete this recipe?')) {
+                const index = recipes.findIndex(r => r.id === id);
+                recipes.splice(index, 1);
+                saveRecipes();
+                renderRecipes();
+            }
+        }
+
+        // Event Listeners
+        document.getElementById('addRecipeBtn').addEventListener('click', () => {
+            document.getElementById('recipeForm').classList.remove('hidden');
+        });
+
+        document.getElementById('cancelRecipe').addEventListener('click', () => {
+            document.getElementById('recipeForm').classList.add('hidden');
+            document.getElementById('recipeForm').reset();
+        });
+
+        document.getElementById('recipeForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const newRecipe = {
+                name: document.getElementById('recipeName').value,
+                category: document.getElementById('recipeCategory').value,
+                ingredients: document.getElementById('ingredients').value,
+                instructions: document.getElementById('instructions').value
+            };
+            addRecipe(newRecipe);
+            document.getElementById('recipeForm').classList.add('hidden');
+            document.getElementById('recipeForm').reset();
+        });
+
+        document.getElementById('searchRecipes').addEventListener('input', (e) => {
+            renderRecipes(e.target.value);
+        });
+
+        // Initial render
+        renderRecipes();
+    </script>
+</body>
+</html>
+
 
