Add new cake and Christmas pudding recipes

--- a/index.html
+++ b/index.html
@@ -235,6 +235,23 @@
                 umaRating: true
             },
             {
+                id: 'cake3',
+                name: 'Chocolate Guinness Cake',
+                category: 'Cakes',
+                servingInfo: 'Makes: about 12 slices\nPrep Time: —\nCook Time: 45 mins – 1 hour',
+                ingredients: 'FOR THE CAKE:\n250ml Guinness\n250g Unsalted Butter\n75g Cocoa Powder\n400g Caster Sugar\n142ml Sour Cream\n2 Large Eggs\n1 tbsp Vanilla Extract\n275g Plain Flour\n2½ tsp Bicarbonate of Soda\n\nFOR THE TOPPING:\n300g Cream Cheese\n150g Icing Sugar\n125ml Double Cream (or Whipping Cream)',
+                instructions: '1. Preheat the oven to gas mark 4/180°C/350°F. Butter and line a 23cm (9 inch) springform tin.\n2. Pour the Guinness into a large wide saucepan, add the butter in slices, and heat until melted.\n3. Whisk in the cocoa powder and sugar.\n4. In a separate bowl, beat the sour cream with the eggs and vanilla extract.\n5. Pour the sour cream mixture into the buttery Guinness mixture and whisk in the flour and bicarbonate of soda.\n6. Pour the batter into the prepared tin and bake for 45 minutes to 1 hour.\n7. Leave to cool completely in the tin on a cooling rack.\n8. For the icing: lightly whip the cream cheese until smooth, then sift over the icing sugar and beat together.\n9. Add the cream and beat again until it reaches a spreadable consistency.\n10. Ice only the top of the cake so it resembles the frothy head of a pint of Guinness.',
+                notes: 'This cake is dark, moist, and rich with a gentle Guinness tang. It tastes delicious plain or with the cream cheese frosting.'
+            },
+            {
+                id: 'christmas1',
+                name: 'Traditional Christmas Pudding',
+                category: 'Christmas',
+                servingInfo: 'Serves: 8–10\nPrep Time: 25 mins plus overnight soaking\nCook Time: 8 hours\nNotes: Makes one large pudding in a 2pt/1.2 litre basin or two smaller 1pt/570ml puddings (same cooking time). Reheats beautifully next day wrapped in foil.',
+                ingredients: '4oz / 110g Shredded suet\n2oz / 50g Self-raising flour\n4oz / 110g White bread crumbs\n8oz / 225g Soft brown sugar\n1 tsp Mixed spice\n1/4 tsp Grated nutmeg\nA pinch of cinnamon\n4oz / 110g Sultanas\n4oz / 110g Raisins\n10oz / 275g Currants\n1oz / 25g Mixed candied peel\n1oz / 25g Chopped almonds\n1 Small cooking apple (peeled, cored, finely chopped)\nZest of 1/2 orange\nZest of 1/2 lemon\n2 tbsp Rum\n2.5floz / 75ml Barley wine\n2.5floz / 75ml Stout\n2 large eggs\n2pt / 1.2 litre basin (lightly greased)',
+                instructions: '1. Weigh all dry ingredients & mix well in a large bowl.\n2. Add all spices, lemon, and orange zest.\n3. Stir in dried fruit and apple.\n4. Mix all liquid ingredients in a jug.\n5. Pour into bowl and mix well. (Don’t forget to make a wish!)\n6. Cover and leave overnight.\n7. Pour into greased basin and steam for 8 hours.'
+            },
+            {
                 id: 'buns1',
                 name: 'Tangy Citrus Sticky Chelsea Buns',
                 category: 'Buns',
