--- a/index.html
+++ b/index.html
@@ -236,36 +236,57 @@
             },
             {
                 id: 'cake3',
-                name: 'Chocolate Guinness Cake',
+                name: 'Ultimate Lemon Meringue Pie',
                 category: 'Cakes',
-                servingInfo: 'Makes: about 12 slices\nPrep Time: —\nCook Time: 45 mins – 1 hour',
-                ingredients: 'FOR THE CAKE:\n250ml Guinness\n250g Unsalted Butter\n75g Cocoa Powder\n400g Caster Sugar\n142ml Sour Cream\n2 Large Eggs\n1 tbsp Vanilla Extract\n275g Plain Flour\n2½ tsp Bicarbonate of Soda\n\nFOR THE TOPPING:\n300g Cream Cheese\n150g Icing Sugar\n125ml Double Cream (or Whipping Cream)',
-                instructions: '1. Preheat the oven to gas mark 4/180°C/350°F. Butter and line a 23cm (9 inch) springform tin.\n2. Pour the Guinness into a large wide saucepan, add the butter in slices, and heat until melted.\n3. Whisk in the cocoa powder and sugar.\n4. In a separate bowl, beat the sour cream with the eggs and vanilla extract.\n5. Pour the sour cream mixture into the buttery Guinness mixture and whisk in the flour and bicarbonate of soda.\n6. Pour the batter into the prepared tin and bake for 45 minutes to 1 hour.\n7. Leave to cool completely in the tin on a cooling rack.\n8. For the icing: lightly whip the cream cheese until smooth, then sift over the icing sugar and beat together.\n9. Add the cream and beat again until it reaches a spreadable consistency.\n10. Ice only the top of the cake so it resembles the frothy head of a pint of Guinness.',
-                notes: 'This cake is dark, moist, and rich with a gentle Guinness tang. It tastes delicious plain or with the cream cheese frosting.'
+                servingInfo: 'Serves 6 - 8\nPrep 1 hr 30 mins\nCook 1 hr 45 mins (or 40-50 mins if baking the pastry a day ahead)\nSensationally light, lemony and buttery',
+                ingredients: 'FOR THE PASTRY:\n175g plain flour\n100g cold butter, cut in small pieces\n1 tbsp icing sugar\n1 egg yolk\n\nFOR THE FILLING:\n2 level tbsp cornflour\n100g golden caster sugar\nFinely grated zest 2 large lemons\n125ml fresh lemon juice\nJuice 1 small orange\n85g butter, cut into pieces\n3 egg yolks and 1 whole egg\n\nFOR THE MERINGUE:\n4 egg whites\n200g golden caster sugar\n2 level tsp cornflour',
+                instructions: '1. Make pastry: combine flour, butter, icing sugar, egg yolk and water. Pulse until mixture binds. Roll and line tin, prick base, chill.\n2. Bake blind 15 mins, remove foil, bake 5–8 mins more. Cool.\n3. Lower oven to 180°C/fan 160°C/gas 4.\n4. Prepare filling: mix cornflour, sugar, and zest. Add lemon juice and orange juice gradually. Cook until thick, remove heat, beat in butter then eggs. Return to heat till thickened.\n5. Make meringue: whisk egg whites to soft peaks. Gradually whisk in sugar and cornflour.\n6. Reheat filling, pour into case, top with meringue, bake 18–20 mins until golden.\n7. Cool and slice.'
+            },
+            {
+                id: 'cake4',
+                name: 'Guinness Cake',
+                category: 'Cakes',
+                servingInfo: 'Rich and dark Guinness chocolate cake',
+                ingredients: '250ml Guinness\n250g unsalted butter\n75g cocoa powder\n400g caster sugar\n142ml sour cream\n2 eggs\n1 tbsp vanilla extract\n275g plain flour\n2½ tsp bicarbonate of soda',
+                instructions: '1. Heat oven to 180°C/fan 160°C/gas 4.\n2. Butter and line a 23cm springform tin.\n3. Pour Guinness and butter into a pan and heat until butter melts.\n4. Whisk in cocoa and sugar.\n5. In a separate bowl, beat sour cream, eggs, and vanilla.\n6. Mix in the Guinness mixture.\n7. Whisk in flour and bicarbonate of soda.\n8. Pour batter into tin and bake 45 mins–1 hr.\n9. Cool completely before icing if desired.'
+            },
+            {
+                id: 'pudding1',
+                name: 'Ultimate Crème Brûlée',
+                category: 'Puddings',
+                ingredients: '2 cartons double cream (1 large 284ml + 1 small 142ml)\n100ml full-fat milk\n1 vanilla pod\n5 large egg yolks\n50g golden caster sugar + extra for topping',
+                instructions: '1. Preheat oven to 160°C fan / 180°C conventional / gas 4. Sit 4 ramekins in a deep roasting tin.\n2. Pour cream and milk into a pan. Split vanilla pod, scrape seeds into pan, add pod.\n3. Whisk egg yolks and sugar 1 min until pale and fluffy.\n4. Heat cream mixture until bubbles appear. Remove from heat.\n5. Pour hot cream into yolks, whisking constantly. Strain through sieve. Skim off foam.\n6. Pour into ramekins. Add hot water to tin halfway up sides.\n7. Cover loosely with baking sheet and bake 30–35 mins until softly set.\n8. Cool slightly, chill until cold (overnight fine).\n9. To serve, sprinkle 1½ tsp sugar on each, spray lightly with water, caramelize with blowtorch until golden.'
+            },
+            {
+                id: 'cookie1',
+                name: 'Coconut Cookies',
+                category: 'Cookies',
+                ingredients: '5oz Margarine\n3oz Sugar\n5oz Flour\nFew drops of Vanilla',
+                instructions: '1. Mix sugar and margarine then add flour and vanilla.\n2. Roll into balls (sticky) and roll in coconut.\n3. Slightly flatten and add 1/4 of a cherry on top.\n4. Bake at 180°C for 10-12 minutes.'
             },
             {
                 id: 'christmas1',
                 name: 'Traditional Christmas Pudding',
                 category: 'Christmas',
-                servingInfo: 'Serves: 8–10\nPrep Time: 25 mins plus overnight soaking\nCook Time: 8 hours\nNotes: Makes one large pudding in a 2pt/1.2 litre basin or two smaller 1pt/570ml puddings (same cooking time). Reheats beautifully next day wrapped in foil.',
-                ingredients: '4oz / 110g Shredded suet\n2oz / 50g Self-raising flour\n4oz / 110g White bread crumbs\n8oz / 225g Soft brown sugar\n1 tsp Mixed spice\n1/4 tsp Grated nutmeg\nA pinch of cinnamon\n4oz / 110g Sultanas\n4oz / 110g Raisins\n10oz / 275g Currants\n1oz / 25g Mixed candied peel\n1oz / 25g Chopped almonds\n1 Small cooking apple (peeled, cored, finely chopped)\nZest of 1/2 orange\nZest of 1/2 lemon\n2 tbsp Rum\n2.5floz / 75ml Barley wine\n2.5floz / 75ml Stout\n2 large eggs\n2pt / 1.2 litre basin (lightly greased)',
-                instructions: '1. Weigh all dry ingredients & mix well in a large bowl.\n2. Add all spices, lemon, and orange zest.\n3. Stir in dried fruit and apple.\n4. Mix all liquid ingredients in a jug.\n5. Pour into bowl and mix well. (Don’t forget to make a wish!)\n6. Cover and leave overnight.\n7. Pour into greased basin and steam for 8 hours.'
+                servingInfo: 'Serves: 8–10\nPrep: 25 mins plus overnight soaking\nCook: 8 hours',
+                ingredients: '4oz / 110g Shredded suet\n2oz / 50g Self-raising flour\n4oz / 110g Breadcrumbs\n8oz / 225g Brown sugar\n1 tsp Mixed spice\n¼ tsp Nutmeg\nPinch Cinnamon\n4oz Sultanas\n4oz Raisins\n10oz Currants\n1oz Mixed peel\n1oz Chopped almonds\n1 Small apple\nZest ½ orange\nZest ½ lemon\n2 tbsp Rum\n75ml Barley wine\n75ml Stout\n2 eggs\n2pt basin (greased)',
+                instructions: '1. Mix all dry ingredients in large bowl.\n2. Add zest, fruit, and apple.\n3. Combine wet ingredients, pour in, mix well (make a wish!).\n4. Cover and leave overnight.\n5. Pour into greased basin and steam 8 hours.'
             },
             {
                 id: 'buns1',
                 name: 'Tangy Citrus Sticky Chelsea Buns',
                 category: 'Buns',
-                ingredients: '450ml whole milk\n60g unsalted butter\n650g strong white bread flour\n100g wholemeal flour\n15g salt\n1½ tsp fast-action dried yeast\n2 large eggs\nZest + juice of 1 lemon\n125g icing sugar\n40g melted butter\n1 beaten egg + milk for wash\nFor filling: peel from 1 sweet-cured lemon (optional)\n100g mixed peel\n100g dried fruit\n50g dried apricots\n50g dates\n120g soft brown sugar\n1 tsp mixed spice\n1 tsp cinnamon\nFor glaze: juice of 2 lemons, 50ml lemonade, 125g sugar, 70g sweet-cured lemon pulp (optional)',
-                instructions: '1. Warm milk + butter until melted\n2. Mix flours, salt, and yeast separately\n3. Add eggs to warm milk, then combine with flour to form dough\n4. Knead until smooth, cover and rise 1-2 hrs\n5. Mix filling fruits + spices\n6. Roll dough to rectangle, brush with butter, spread sugar + fruit\n7. Roll tightly, slice into 12 pieces, prove 45-60 mins\n8. Brush with egg wash, bake 30 mins at 200°C/fan 180°C/gas 6\n9. Boil glaze ingredients 5 mins to form syrup\n10. Brush buns with glaze and drizzle icing when cool'
+                ingredients: '450ml whole milk\n60g butter\n650g bread flour\n100g wholemeal flour\n15g salt\n1½ tsp yeast\n2 eggs\nZest + juice 1 lemon\n125g icing sugar\n40g melted butter\n1 egg + milk for wash\n100g mixed peel\n100g dried fruit\n50g apricots\n50g dates\n120g brown sugar\n1 tsp mixed spice\n1 tsp cinnamon\nFor glaze: juice 2 lemons, 50ml lemonade, 125g sugar',
+                instructions: '1. Warm milk and butter.\n2. Mix flours, salt, yeast.\n3. Add eggs and lemon mix, knead dough.\n4. Rise 1–2 hrs.\n5. Mix fruit filling.\n6. Roll, fill, slice into 12, prove 1 hr.\n7. Brush with egg wash, bake 30 mins 200°C.\n8. Boil glaze, brush buns.'
             },
             {
                 id: 'savory1',
                 name: 'Katsu Curry Sauce',
                 category: 'Savory',
-                ingredients: '2-3 tbsp vegetable oil\n1 onion, finely chopped\n1 garlic clove\n2.5cm ginger\n1 tsp turmeric\n2 tbsp curry powder\n1 tbsp flour\n300ml stock\n100ml coconut milk\n1 tsp soy sauce\n1 tsp sugar',
-                instructions: '1. Heat oil, cook onion\n2. Add garlic + ginger\n3. Add spices and flour\n4. Add stock + coconut milk\n5. Add soy + sugar, simmer until thickened'
+                ingredients: '2-3 tbsp oil\n1 onion\n1 garlic clove\n2.5cm ginger\n1 tsp turmeric\n2 tbsp curry powder\n1 tbsp flour\n300ml stock\n100ml coconut milk\n1 tsp soy sauce\n1 tsp sugar',
+                instructions: '1. Cook onion in oil.\n2. Add garlic, ginger.\n3. Add spices + flour.\n4. Add stock, coconut milk.\n5. Simmer until thick.'
             }
-        ];
+        ];;
 
         let lastViewedId = localStorage.getItem('lastViewedRecipe');
 
